istio/requestAuthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: search
spec:
  selector:
    matchLabels:
     app: search
  jwtRules:
    - forwardOriginalToken: true
      outputPayloadToHeader: x-jwt-payload
      issuer: "http://keycloak.default.svc.cluster.local:8080/realms/Istio"
      jwksUri: "http://keycloak.default.svc.cluster.local:8080/realms/Istio/protocol/openid-connect/certs"
